--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
     "vaul": "^0.9.9"
   },
