--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
